--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ WS_TIMEOUT=60.0
 # Межконтейнерные ссылки (для gateway)
 ASR_URL=http://asr-service:8081/api/stt/bytes
 TTS_WS_URL=ws://tts-service:8082/ws/tts
+TTS_WS_URL_LOCAL=ws://127.0.0.1:8082/ws/tts
 
 # Для клиента на хосте
 GATEWAY_URL=http://127.0.0.1:8000/api/gateway/tts-from-audio
